# istruct

./: .gitignore  Cargo.toml  README.md
common/: Cargo.toml
common/design-docs/: README.md  api_design.md  capability (old).md  dev_list.md  rust_arch_design.md
common/src/: api.rs  lib.rs  router.rs
common/src/api/: compute.rs
common/src/api/compute/: devadm.rs  machine.rs
common/src/api/compute/machine/: device.rs
common/src/api/network/: device.rs
common/src/api/storage/: device.rs
components/libvirt/: Cargo.toml
components/libvirt/src/: client.rs  lib.rs  main.rs  persy_indexes.md  xml.rs
components/libvirt/src/client/: api.rs
components/libvirt/src/xml/: domain.rs  network.rs
