[package]
name = "istruct-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.45"
async-trait = "0.1.51"
axum = "0.4"
axum-debug = "0.2.0"
serde = { version = "1.0.130", features = ["derive"] }
uuid = { version = "0.8.2", features = ["serde"] }
