[package]
name = "istruct-libvirt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.45"
async-trait = "0.1.52"
diplomatic-bag = "0.2.0"
istruct-common = { path = "../../common" }
persy = "1.1.3"
serde = { version = "1.0.130", features = ["derive"] }
# serde-xml-rs = { git = "https://github.com/rreverser/serde-xml-rs", rev = "b0b8bc73efb937d550b0601623e33eb8c84c6ca8" }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
virt = "0.2.11"
xml_serde = "1.1.0"

tokio = { version = "1.15.0", features = ["full"] }
axum = "0.4"
warp = "0.3.2"
tower-http = { version = "0.2.0", features = ["trace"] }
tracing-subscriber = "0.3.5"

[features]
